AppCategoriesList scrollbar styled; Footer and Header made dependent on theme; reassigned vuetify colors corrected

--- a/assets/styles/vuetify-reassign.scss
+++ b/assets/styles/vuetify-reassign.scss
@@ -6,8 +6,3 @@
 .v-card__title {
   margin-bottom: 10px;
 }
-
-.v-application button.success {
-  background-color: #4fb553db !important;
-  border-color: #4fb553db !important;
-}
